[package]
name = "libtest-mimic-collect"
version = "0.3.2"
edition = "2021"
authors = ["Marat Dulin <mdevils@gmail.com>"]
description = "Global test collector for libtest-mimic"
categories = [
    "development-tools::testing",
]
documentation = "https://docs.rs/libtest-mimic-collect/"
homepage = "https://github.com/mdevils/libtest-mimic-collect"
repository = "https://github.com/mdevils/libtest-mimic-collect"
keywords = ["libtest", "libtest-mimic", "testing"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ctor = "0.2.9"
libtest-mimic = "0.8.1"
libtest-mimic-collect-macro = "0.3.0"

[lib]
test = false
doctest = false

[[test]]
name = "test"
harness = false
path = "tests/test.rs"

